<resources>
    <string name="app_name">Slideshow Wallpaper</string>
    <string name="wallpaper_label">Slideshow</string>
    <string name="wallpaper_description">Switch between your album images</string>
    <string name="settings_title">Settings</string>
    <string name="apply_walls">Set wallpaper</string>
    <string name="select_dir">Gallery folder</string>
    <string name="select_photo_multi">Gallery images/videos</string>
    <string name="duration">Wallpaper update frequency</string>
    <string name="Infinitely">Infinitely</string>
    <string name="min">min</string>
    <string name="speed">Offset animation speed</string>
    <string name="settings">Display options</string>
    <string name="settings_dir">Create slideshow from</string>
    <string name="speed_off">Disabled</string>
    <string name="speed_low">Slow</string>
    <string name="speed_normal">Normal</string>
    <string name="speed_fast">Fast</string>
    <string name="quality_ultra">Ultra</string>
    <string name="quality_high">High</string>
    <string name="quality_normal">Medium</string>
    <string name="quality_low">Low</string>
    <string name="quality">Image quality</string>
    <string name="sound">Sound</string>
    <string name="sound_summary">Play sound in video</string>
    <string name="touch">Swipe action</string>
    <string name="touch_parallax">Parallax effect</string>
    <string name="touch_offset">Scroll effect</string>
    <string name="touch_off">Disabled</string>
    <string name="double_tap">Double tap action</string>
    <string name="double_tap_summary">Change wallpaper</string>
    <string name="activity_error">Can\'t open system settings</string>
    <string name="tilt_action">Parallax tilt effect (Gyroscope)</string>
    <string name="select_photo_multi_summary">Selecting single or more files in the gallery</string>
    <string name="select_dir_summary">Selecting single folder</string>
    <string name="tilt_off">Disable</string>
    <string name="tilt_low">Low</string>
    <string name="tilt_normal">Normal</string>
    <string name="tilt_high">High</string>
    <string name="scale">Scale (Percent)</string>
    <string name="scale_100">Original</string>
    <string name="scale_120">Increased by 20 percent</string>
    <string name="scale_150">Increased by 50 percent</string>
    <string name="scale_200">Increased by 100 percent</string>
</resources>